# HIPI-Board

./: CMakeLists.txt  README.md  device.cpp  display.cpp  display.h  drive.cpp  drive.h  hipi.cpp  hpil.h
examples/: main.cpp  pico_main.cpp
include/: LinuxSpiDevTransport.hpp  PicoSpiTransport.hpp  RA8875.hpp  RA8875Transport.hpp  Screen.hpp  bmp_loader.hpp  boardui.h  buttons.h  config.hpp  display.h  display_test.hpp  drive.h  gslX680fw.h  hipi_font.hpp  hp82163_font.hpp  hpgl_font.h  hpil.h  hpil_pio.hpp  illeds.h  leds.h  pilbox.h  plotter.h  plotterview.h  tape.h  touch.h  tusb_config.h  ui_buttons.hpp  uidialog.hpp  usb_serial.h
scripts/: hpil_parser.py
src/: LinuxSpiDevTransport.cpp  PicoSpiTransport.cpp  RA8875.cpp  Screen.cpp  boardui.cpp  device.cpp  display.cpp  drive.cpp  hipi.cpp  hpil.cpp  hpil.pio  hpil_debug.pio  hpil_debug_1hz.pio  hpil_debug_simple.pio  hpil_debug_slow.pio  hpil_debug_tx.pio  hw_config.cpp  illeds.cpp  leds.cpp  linux_main.cpp  my_descriptors.c  pico_main.cpp  pilbox.cpp  plotter.cpp  plotterview.cpp  touch.cpp  usb_descriptors.c
